@@ -1,7 +1,7 @@
 ## Interface: 60100
 ## Title: Lib: IGAS
 ## Author: kurapica.igas@gmail.com
-## Version: v70
+## Version: v71
 ## Notes: In-game addon system
 ## URL: http://github.com/kurapica
 ## DefaultState: Enabled
